force-app/main/default/objects/AttachmentSets__x/AttachmentSets__x.object-meta.xml
<CustomObject>
    <description>AttachmentSets</description>
    <externalDataSource>AusNet_OData</externalDataSource>
    <externalName>AttachmentSets</externalName>
    <label>AttachmentSets</label>
    <pluralLabel>AttachmentSets</pluralLabel>
</CustomObject>