force-app/main/default/objects/AttachmentSets__x/fields/ArcDocId__c.field-meta.xml
<CustomField>
    <fullName>ArcDocId__c</fullName>
    <description>ArcDocId</description>
    <externalDeveloperName>ArcDocId</externalDeveloperName>
    <label>ArcDocId</label>
    <length>128</length>
    <type>Text</type>
</CustomField>