force-app/main/default/objects/AttachmentSets__x/fields/ArObject__c.field-meta.xml
<CustomField>
    <fullName>ArObject__c</fullName>
    <description>ArObject</description>
    <externalDeveloperName>ArObject</externalDeveloperName>
    <label>ArObject</label>
    <length>128</length>
    <type>Text</type>
</CustomField>