force-app/main/default/objects/AttachmentSets__x/fields/CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate__c</fullName>
    <description>CreatedDate</description>
    <externalDeveloperName>CreatedDate</externalDeveloperName>
    <label>CreatedDate</label>
    <length>128</length>
    <type>Text</type>
</CustomField>