force-app/main/default/objects/AttachmentSets__x/fields/FileContent__c.field-meta.xml
<CustomField>
    <fullName>FileContent__c</fullName>
    <description>FileContent</description>
    <externalDeveloperName>FileContent</externalDeveloperName>
    <label>FileContent</label>
    <type>TextArea</type>
</CustomField>