force-app/main/default/objects/AttachmentSets__x/fields/FileDesc__c.field-meta.xml
<CustomField>
    <fullName>FileDesc__c</fullName>
    <description>FileDesc</description>
    <externalDeveloperName>FileDesc</externalDeveloperName>
    <label>FileDesc</label>
    <length>128</length>
    <type>Text</type>
</CustomField>