force-app/main/default/objects/AttachmentSets__x/fields/Filename__c.field-meta.xml
<CustomField>
    <fullName>Filename__c</fullName>
    <description>Filename</description>
    <externalDeveloperName>Filename</externalDeveloperName>
    <label>Filename</label>
    <length>128</length>
    <type>Text</type>
</CustomField>