force-app/main/default/objects/AttachmentSets__x/fields/FileSize__c.field-meta.xml
<CustomField>
    <fullName>FileSize__c</fullName>
    <description>FileSize</description>
    <externalDeveloperName>FileSize</externalDeveloperName>
    <label>FileSize</label>
    <length>128</length>
    <type>Text</type>
</CustomField>