force-app/main/default/objects/AttachmentSets__x/fields/ImageResize__c.field-meta.xml
<CustomField>
    <fullName>ImageResize__c</fullName>
    <description>ImageResize</description>
    <externalDeveloperName>ImageResize</externalDeveloperName>
    <label>ImageResize</label>
    <length>128</length>
    <type>Text</type>
</CustomField>