force-app/main/default/objects/AttachmentSets__x/fields/ObjectId__c.field-meta.xml
<CustomField>
    <fullName>ObjectId__c</fullName>
    <description>ObjectId</description>
    <externalDeveloperName>ObjectId</externalDeveloperName>
    <label>ObjectId</label>
    <length>128</length>
    <type>Text</type>
</CustomField>