force-app/main/default/objects/AttachmentSets__x/fields/OriginalUrl__c.field-meta.xml
<CustomField>
    <fullName>OriginalUrl__c</fullName>
    <description>OriginalUrl</description>
    <externalDeveloperName>OriginalUrl</externalDeveloperName>
    <label>OriginalUrl</label>
    <length>128</length>
    <type>Text</type>
</CustomField>