force-app/main/default/objects/AttachmentSets__x/fields/SapObject__c.field-meta.xml
<CustomField>
    <fullName>SapObject__c</fullName>
    <description>SapObject</description>
    <externalDeveloperName>SapObject</externalDeveloperName>
    <label>SapObject</label>
    <length>128</length>
    <type>Text</type>
</CustomField>