force-app/main/default/objects/AttachmentSets__x/fields/ThumbnailUrl__c.field-meta.xml
<CustomField>
    <fullName>ThumbnailUrl__c</fullName>
    <description>ThumbnailUrl</description>
    <externalDeveloperName>ThumbnailUrl</externalDeveloperName>
    <label>ThumbnailUrl</label>
    <length>128</length>
    <type>Text</type>
</CustomField>