force-app/main/default/objects/AttachmentSets__x/fields/ThumbnaiUrl__c.field-meta.xml
<CustomField>
    <fullName>ThumbnaiUrl__c</fullName>
    <description>ThumbnaiUrl</description>
    <externalDeveloperName>ThumbnaiUrl</externalDeveloperName>
    <label>ThumbnaiUrl</label>
    <length>128</length>
    <type>Text</type>
</CustomField>