force-app/main/default/objects/AttachmentSets__x/fields/Url__c.field-meta.xml
<CustomField>
    <fullName>Url__c</fullName>
    <description>Url</description>
    <externalDeveloperName>Url</externalDeveloperName>
    <label>Url</label>
    <length>128</length>
    <type>Text</type>
</CustomField>